--- a/src/main/resources/templates/listeSeries.html
+++ b/src/main/resources/templates/listeSeries.html
@@ -9,7 +9,7 @@
 <body>
 <div th:replace="template"></div>
 <br>
-<brdiv class="container">
+<div class="container mt-5">
     <div class="card">
         <div class="card-header">
             Liste des Séries
